--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Getting_Cleaning_Data/Quiz3/q2.jpg
 Practical_Machine_Learning/Project/pml-testing.csv
 Practical_Machine_Learning/Project/pml-training.csv
 Practical_Machine_Learning/Project/project_cache/*
+Practical_Machine_Learning/quiz4_cache/*
+Reproducible_Research/Project_2/Reproducible_Research_Proj2_cache/*
