--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Practical_Machine_Learning/Project/pml-training.csv
 Practical_Machine_Learning/Project/project_cache/*
 Practical_Machine_Learning/quiz4_cache/*
 Reproducible_Research/Project_2/Reproducible_Research_Proj2_cache/*
+Developing_Data_Products/Project/DDP_Final_Project/data/*.kmz
+Developing_Data_Products/Project/DDP_Final_Project/data/*.tab
