--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Practical_Machine_Learning/quiz4_cache/*
 Reproducible_Research/Project_2/Reproducible_Research_Proj2_cache/*
 Developing_Data_Products/Project/DDP_Final_Project/data/*.kmz
 Developing_Data_Products/Project/DDP_Final_Project/data/*.tab
+Developing_Data_Products/Project/DDP_Final_Project/pitch/.cache/*
