--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 *.Rhistory
 *.zip
 *.RData
+*.Rhistory
+*.pdf
 Getting_Cleaning_Data/Project/UCI HAR Dataset/*
 Getting_Cleaning_Data/Quiz3/q2.jpg
 Practical_Machine_Learning/Project/pml-testing.csv
@@ -9,6 +11,10 @@ Practical_Machine_Learning/Project/pml-training.csv
 Practical_Machine_Learning/Project/project_cache/*
 Practical_Machine_Learning/quiz4_cache/*
 Reproducible_Research/Project_2/Reproducible_Research_Proj2_cache/*
+Reproducible_Research/Project_2/rsconnect
+Reproducible_Research/Project_2/cache
+Reproducible_Research/Project_2/figure
+Reproducible_Research/Project_2/StormData.csv.bz2
 Developing_Data_Products/Project/DDP_Final_Project/data/*.kmz
 Developing_Data_Products/Project/DDP_Final_Project/data/*.tab
 Developing_Data_Products/Project/DDP_Final_Project/pitch/.cache/*
